@@ -3,7 +3,7 @@ _Name=Help
 _Comment=Get help with GNOME
 OnlyShowIn=GNOME;
 Exec=yelp
-Icon=gnome-help
+Icon=help-browser
 StartupNotify=true
 Terminal=false
 Type=Application
