@@ -1,3 +1,12 @@
+2008-06-27  Luca Ferretti  <elle.uca@libero.it>
+
+	* src/yelp-main.c: (main):
+	* src/yelp-window.c: (window_about_cb):
+	* yelp.desktop.in.in:
+
+	Use "help-browser" named icon from fd.o icon naming spec
+	instead deprecated "gnome-help".
+
 === 2.23.1 ===
 
 2008-06-02  Don Scorgie  <dscorgie@svn.gnome.org>
